css/styles.css
@charset "utf-8";
/* CSS Document */

body {
	background-color: #fdfdfd;
  margin: 0;
  padding: 0;
  position: relative;
  font-size: 16px;
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  color: #000;
}
a img{
	border: none 0px #fff;
}
details, footer, header, nav, section {
	display: block;
}
#maincontent {
  background-color: #f3f3f3;
  min-height: 100%;
}
.skip-link {
  position: absolute;
  top: -4em;
  left: 0;
  background-color: #836715;
  color: #fff;
  padding: 1em;
  font-weight: bold;
  text-decoration: none;
}
.skip-link:focus {
  top: 0;
  box-shadow: 0 0 10px #486d8a;
}


/* ====================== Navigation ====================== */

.header {
  width: 100%;
  background-color: #123754;
  padding: 1em 0;
}
.title {
  font-family: 'Pacifico', cursive;
  font-size: 2em;
  text-align: center;
}
.title a {
  color: #fff;
  text-decoration: none;
}
.title a:focus {
  color: #d6ba68;
  outline: none;
}
#breadcrumb {
    padding: 1em;
    list-style: none;
    background-color: #fff;
    margin: 0;
    width: 100%;

}

/* Display list items side by side */
#breadcrumb li {
    display: inline;
}

/* Add a slash symbol (/) before/behind each list item */
#breadcrumb li+li:before {
    padding: 8px;
    color: black;
    content: "/\00a0";
}

/* Add a color to all links inside the list */
#breadcrumb li a {
    color: #0275d8;
    text-decoration: none;
}

/* Add a color on mouse-over */
#breadcrumb li a:hover {
    color: #01447e;
    text-decoration: underline;
}
#breadcrumb li a:focus {
  color: #d6ba68;
}
/* ====================== Map ====================== */
#map {
  height: 400px;
  width: 100%;
  background-color: #ccc;
}
#map > div > div > div:nth-child(3):focus {
  outline: #d6ba68;
}
#map > div > div > div:nth-child(4):focus {
  color: #d6ba68;
}
/* ================= Restaurant Filtering ================= */
.filter-options {
  width: 100%;
  background-color: #28506e;
  padding-bottom: 1em;
}
.filter-header {
  color: white;
  font-size: 1em;
  margin: 0;
  text-align: center;
  padding: 2em;
}
.filter-header:focus {
  color: #d6ba68;
  outline: none;
}
.filter-options select {
  background-color: white;
  border: 1px solid #000;
  font-family: 'Montserrat', sans-serif;
  font-size: 1em;
  padding: 1em;
  display: block;
  width: 200px;
  margin: 0 auto 1em auto;
  border-radius: 3px;
}
.filter-options select:focus {
  outline: none;
  border: solid 5px #d6ba68;
}

/* =================== Restaurant Listing =================== */
#restaurants-list {
  list-style-type: none;
  background-color: #f3f3f3;
  list-style: none;
  margin: 0;
  padding: 0;
  text-align: center;
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
}
#restaurants-list li {
  background-color: #fff;
  margin: 1em;
  padding: 0;
  text-align: left;
  width: 300px;
  box-shadow: 0 0 20px grey;
}
#restaurants-list li:hover {
  box-shadow: 0 0 5px grey;
  transition: all 0.5s ease;
}
#restaurants-list .restaurant-img {
  background-color: #ccc;
  display: block;
  margin: 0;
  width: 100%;
}
#restaurants-list li h1 {
  color: #836715;
  text-transform: uppercase;
  text-align: center;
  padding: 1em;
  font-size: 1em;
  font-weight: bold;
}
#restaurants-list p {
  margin: 0;
  padding: 0 2em;
}
#restaurants-list li a {
  background-color: #836715;
  color: #fff;
  display: block;
  font-weight: bold;
  margin: 2em 2em 1em 2em;
  padding: 1em;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  letter-spacing: 2px;
}
.view-details:focus {
  outline: 0;
  border: solid 5px #d6ba68;
}

/* =================== Restaurant Details =================== */

.inside #map-container {
  height: 300px;
  width: 100%;
}
.inside #map {
  background-color: #ccc;
  height: 100%;
  width: 100%;
}
#restaurant-name {
  color: #836715;
  font-size: 2em;
  text-transform: uppercase;
  text-align: center;
}
#restaurant-img {
	width: 100%;
}
#restaurant-address {
  padding-top: 1em;
  font-weight: bold;
}
#restaurant-hours {
  padding: 1em 0;
  min-width: 300px;
}
#restaurant-cuisine {
  background-color: #333;
  color: #fff;
  letter-spacing: 10px;
  margin: 1em 0;
  padding: 0.5em;
  text-align: center;
  text-transform: uppercase;
}
#restaurant-container, #reviews-container {
  margin: 0 auto;
  width: 95%;
}
#reviews-container {
  border-top: solid 1px #aaa;
}
#reviews-container h2 {
  color: #836715;
  font-size: 2em;
  text-align: center;
}
#reviews-list {
  margin: 0;
  padding: 0;
}
#reviews-list li {
  background-color: #fff;
  display: block;
  list-style-type: none;
  overflow: hidden;
  padding: 1em;
  margin-top: 1em;
  box-shadow: 0 0 10px #aaa;
}
#reviews-list li p {
  margin: 1em 0 0 0;
  font-weight: bold;
}
#reviews-list li p:nth-last-child(1) {
  border-top: solid 1px #aaa;
  border-radius: 3px;
  font-weight: 400;
  padding: 1em 0;
  text-align: justify;
}
#restaurant-hours td {
  color: #666;
}
#reviews-list > li > p:nth-child(3) {
  background-color: #ab8e37;
  padding: 1em;
  width: 90px;
  text-align: center;
  border-radius: 5px;
  right: 2.1em;
  position: absolute;
  margin-top: -54px;
  color: #fff;
  font-weight: bold;
  letter-spacing: 2px;
}

/* FOOTER */

.footer {
  background-color: #123754;
  color: #fff;
  letter-spacing: 1px;
  padding: 2em;
  text-align: center;
  margin-top: 1em;
}
.footer a {
  color: #fff;
  text-decoration: none;
  font-weight: bold;
}
.footer a:hover {
  color: #ab8e37;
}
.copyright:focus {
  outline: 0;
  color: #d6ba68;
}
:focus {
  outline: none !important;
}

@media screen and (min-width: 360px) {
  #map {
    height: 510px;
  }
  #restaurants-list li {
    width: 330px;
  }
  #restaurants-list li h1 {
    font-size: 1.5em;
  }
}
@media screen and (min-width: 375px) {
  #restaurants-list li {
    width: 350px;
  }
}
@media screen and (min-width: 450px) {
  .filter-options {
    text-align: center;
  }
  .filter-options select {
    display: inline-block;
    width: 220px;
    margin: 0 auto 1.5em auto;
  }
  .filter-header {
    font-size: 1.5em;
 }
}
@media screen and (min-width: 768px) {
  .title {
    font-size: 3em;
  }
  .filter-options select {
    margin: 0 auto 1.5em 1em;
  }
  #restaurants-list li h1 {
    height: 2em;
    font-size: 2em;
  }
  #restaurants-list > li > p:nth-child(4) {
    height: 3em;
  }
  #restaurant-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
  }
  #restaurant-name {
    width: 100%;
  }
  .restaurant-left {
    width: 60%;
  }
  .restaurant-right {
    width: 40%;
  }
  #restaurant-cuisine {
    margin: 0;
  }
  #restaurant-address {
    padding: 1em;
  }
  #restaurant-hours {
    padding: 0 1em;
  }
  #reviews-container h2 {
    text-align: center;
    text-transform: uppercase;
  }
  .inside #map-container {
    height: 340px;
  }
}
@media screen and (min-width: 1024px) {
  #restaurant-address {
    padding: 1em 1em 1em 3em;
  }
  #restaurant-hours {
    padding: 0 1em 1em 3em;
  }
  #reviews-list > li > p:nth-child(3) {
    right: 2.5em;
  }
} 
@media screen and (min-width: 1280px) {
  #restaurant-container, #reviews-container {
    max-width: 1280px;
    margin: 0 auto;
  }
  #reviews-list > li > p:nth-child(3) {
    right: 21em;
    width: 110px;
  }
}

